--- a/theaterlaakreact/package.json
+++ b/theaterlaakreact/package.json
@@ -13,6 +13,8 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.5",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
