--- a/TheaterLaakAPi/appsettings.json
+++ b/TheaterLaakAPi/appsettings.json
@@ -15,6 +15,7 @@
   "ConnectionStrings": {
     "DBContext": "Server=(localdb)\\mssqllocaldb;Database=;Trusted_Connection=True;MultipleActiveResultSets=true",
     "DBContextConnection": "Data Source=TheaterLaakAPi.db",
-    "TheaterLaakAPiIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TheaterLaakAPi;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TheaterLaakAPiIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TheaterLaakAPi;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TodoContext": "Server=(localdb)\\mssqllocaldb;Database=TodoContext-b883f0f8-602c-43b2-ba33-7010938524d1;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
