--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,7 @@ ASALocalRun/
 .vscode/launch.json
 .gitignore
 .vscode/tasks.json
+TheaterLaakAPi/0backup/controllers/RangController.cs
+TheaterLaakAPi/0backup/controllers/StoelController.cs
+TheaterLaakAPi/0backup/controllers/VoorstellingController.cs
+TheaterLaakAPi/0backup/controllers/ZaalController.cs
