Finished Login and registration using JWT and Sessions + User home that loads all the user data + more

--- a/TheaterLaakAPi/appsettings.json
+++ b/TheaterLaakAPi/appsettings.json
@@ -7,14 +7,15 @@
   },
   "Jwt": {
     "Key": "this is the secret key for the jwt, it must be kept secure",
-    "Issuer": "http://localhost:5044",
-    "Audience": "http://localhost:5044",
+    "Issuer": "localhost:5044",
+    "Audience": "localhost:5044",
     "Subject": "JWT for http://localhost:5044"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DBContext": "Server=(localdb)\\mssqllocaldb;Database=;Trusted_Connection=True;MultipleActiveResultSets=true",
     "DBContextConnection": "Data Source=TheaterLaakAPi.db",
-    "TheaterLaakAPiIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TheaterLaakAPi;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TheaterLaakAPiIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TheaterLaakAPi;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContext": "Data Source=ApplicationDbContext-f3be2d01-370c-4ab8-9518-a1f4c5d25202.db"
   }
 }
