--- a/theaterlaakreact/package.json
+++ b/theaterlaakreact/package.json
@@ -10,9 +10,11 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.5",
+    "redux": "^4.2.0",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
