--- a/TheaterLaakAPi/Properties/launchSettings.json
+++ b/TheaterLaakAPi/Properties/launchSettings.json
@@ -34,6 +34,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "TheaterLaakAPi": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:50711;http://localhost:25965",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
