--- a/theaterlaakreact/package.json
+++ b/theaterlaakreact/package.json
@@ -10,6 +10,7 @@
     "apollo-link-rest": "^0.9.0",
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
+    "cypress": "^12.3.0",
     "graphql": "^16.6.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
