--- a/theaterlaakreact/package.json
+++ b/theaterlaakreact/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
+    "missing": "^0.0.1",
     "react": "^18.2.0",
     "react-auth-kit": "^2.7.1",
     "react-bootstrap": "^2.7.0",
