--- a/theaterlaakreact/package.json
+++ b/theaterlaakreact/package.json
@@ -1,6 +1,7 @@
 {
   "name": "theaterlaakreact",
   "version": "0.1.0",
+  "homepage": "https://amirsgateway.nl",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
