defaultConnection in appsettings en program.cs. verder bij yml 4 lines

--- a/TheaterLaakAPi/appsettings.json
+++ b/TheaterLaakAPi/appsettings.json
@@ -13,7 +13,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBContext": "Server=(localdb)\\mssqllocaldb;Database=;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "defaultConnection": "Server=(localdb)\\mssqllocaldb;Database=;Trusted_Connection=True;MultipleActiveResultSets=true",
     "DBContextConnection": "Data Source=TheaterLaakAPi.db",
     "TheaterLaakAPiIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TheaterLaakAPi;Trusted_Connection=True;MultipleActiveResultSets=true",
     "ApplicationDbContext": "Data Source=ApplicationDbContext-f3be2d01-370c-4ab8-9518-a1f4c5d25202.db"
